
A reorganisation of the logbook, adopted the tango icons for the
sidebuttons and removed sitelogo. The AboutBook tab is now hidden and
the help button loads it instead. All preparation for 1.0 overhaul.

The classes table now has fields to count number of single and double
period lessons. Reworked classes_matrix.php for this.

Changed the hover css for buttons and links.

The register now has a setAll() function for office and admin uses to
complete a whole register in one go with one set value.

The classes_matrix improved and extended to include lesson information
for single and double periods.

Improved FET-compatible timetable export with full activity, teacher
and student information.

Added a covertitle to the reports xml.



Version ClaSS-0.8.47 release (2008/05/09)
-----------------------------------------

Implemented sub-budgets as a "New budget" call from the
order_limit.php page, and the costlimits of sub-budgets are tallied by
the get_balance_ functions. NB. This does not allow for
sub-sub-budgets!

Added a specialaction field to the ordersupplier table to distinguish
non-suppliers like petty cash who bypass the delivery and invoice
actions.

The orderinvoice table has ben given currency and debitcost fields,
the latter used for charging against the budget exclusively, the other
cost fields are optionaly and purely for information only.

Bugfix to the new_staff.php page in the EntryBook which was producing
a fatal error in PHP5.

Bugfix to the install process which was failing to create the
categorydef table.

Bugfix to maxlength setting in xmlelement_input() for decimal and
integers.

Added a starter .htaccess file as part the toplevel directory
structure in install. Amended the install README to mention this.


Version ClaSS-0.8.46 release (2008/05/05)
-----------------------------------------

Added a list_formgroups() function for consistency.

Improved the staff_details page to select by username or surname and