@@ -169,7 +169,9 @@ if(isset($umns)){
 				value="cw" <?php if($umntype=='cw'){print 'checked';}?>
 				onchange="document.umntypechoice.submit();" />
 <?php
-		if($cidsno==1){
+				/*only display HW for a single class only for courses
+					which do do homework*/
+		if($cidsno==1 and !in_array($classes[$cid]['crid'],getEnumArray('nohomeworkcourses'))){
 ?>
 			<label>&nbsp;HW</label>
 				<input title="<?php print_string('homework',$book);?>" 
